Fix dropdown's overflow in contains list
Fixes #1386

--- a/src/Containers.scss
+++ b/src/Containers.scss
@@ -1,8 +1,6 @@
 @import "global-variables";
 
 .container-pod {
-    overflow-x: auto;
-
     .pf-v5-c-card__header {
         border-color: #ddd;
         padding-top: var(--pf-v5-global--spacer--md);
